kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: profile-stats
  labels:
    name: profile-stats
    ghcr-pat: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
