kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-stats
  namespace: profile-stats
spec:
  type: ClusterIP
  selector:
    app: profile-stats
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
