kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-stats
  namespace: profile-stats
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.lucas.tools
      secretName: profile-stats-tls
  rules:
    - host: api.lucas.tools
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profile-stats
                port:
                  number: 8080
